# sofa_resp_sim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  environment.yml  pyproject.toml
.agents/skills/artifact-digest-refresh/: SKILL.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/implementation-strategy/: SKILL.md
.agents/skills/packaging-integrity-check/: SKILL.md
.agents/skills/pages-pyodide-verification/: SKILL.md
.agents/skills/pr-draft-summary/: SKILL.md
.agents/skills/repo-governance-sync/: SKILL.md
.agents/skills/scientific-numerics-verification/: SKILL.md
.agents/skills/streamlit-app-verification/: SKILL.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: ci.yml  pages.yml
artifacts/: README.md  package_namespace_migration.csv  package_namespace_migration.md  resp_applet_m1_validation.csv  resp_applet_m1_validation.md  resp_applet_m2_uncertainty.csv  resp_applet_m2_uncertainty.md  resp_applet_m3_sweep_validation.csv  resp_applet_m3_sweep_validation.md  resp_applet_m4_hardening.md  resp_applet_m4_performance.csv  resp_scoring_fixtures.csv  resp_scoring_fixtures.md  resp_sofa_sim_summary.csv  resp_sofa_sim_summary.md
docs/: APPLET_HANDOFF_DECISION.md  APPLET_IMPLEMENTATION_PLAN.md  APPLET_RUNBOOK.md  APPLET_SKETCH.md  ARCHITECTURE.md  CLINICAL_SCOPE.md  DECISIONS.md  DEPLOY_PAGES.md  PROVENANCE.md  PUBLIC_RELEASE_AUDIT.md  TEAM_PRACTICES.md  VALIDATION.md  WEB_APP.md  codex_runbook.txt  codex_runbook_2.txt  codex_runbook_3.txt
docs/adr/: 0000-template.md  0001-use-madr-for-project-decisions.md  0002-use-uv-as-the-canonical-environment-manager.md  0003-keep-python-src-layout-for-now.md  0004-keep-streamlit-as-the-validated-reference-ui.md  0005-streamlit-to-pages.md
http:/: CONTINUITY.md
python/scripts/: profile_applet_performance.py
python/src/sofa_resp_sim/: __init__.py  resp_scoring.py  resp_simulation.py  resp_sofa_runner.py  resp_utils.py
python/src/tcco2_accuracy/: resp_scoring.py  resp_sofa_runner.py
python/tests/: test_cli_contract.py  test_resp_scoring.py  test_resp_scoring_fixtures.py  test_resp_scoring_golden_fixtures.py  test_streamlit_app_smoke.py  test_web_presets.py  test_web_reference.py  test_web_services.py  test_web_sweep.py  test_web_uncertainty.py  test_web_view_model.py
scripts/: profile_browser_contract_performance.py  stage_web_python.py
src/sofa_resp_sim/: __init__.py  browser_contract.py  resp_scoring.py  resp_simulation.py  resp_utils.py
src/sofa_resp_sim/core/: __init__.py  resp_scoring.py  resp_simulation.py  resp_utils.py
src/sofa_resp_sim/data/: __init__.py
src/sofa_resp_sim/reporting/: __init__.py  app_services.py  presets.py  reference.py  view_model.py
src/sofa_resp_sim/workflows/: __init__.py  cli.py
tests/: test_repository_contract.py
tests/contracts/: test_browser_contract.py  test_reporting_presets.py  test_reporting_reference.py  test_reporting_services.py  test_reporting_sweep.py  test_reporting_uncertainty.py  test_reporting_view_model.py  test_repository_contract.py  test_stage_web_python.py
tests/core/: test_resp_scoring_golden_fixtures.py
tests/e2e/: test_web_app.py
tests/workflows/: test_cli_contract.py
web/: index.html  pyodide_worker.js
web/assets/css/: styles.css
web/assets/js/: app.js
(+7 files in other folders)
