[project]
name = "project-title"
version = "0.1.0"
description = "One-line description."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.0",
]

[project.scripts]
resp-sofa-sim = "tcco2_accuracy.resp_sofa_runner:main"
resp-sofa-applet = "tcco2_accuracy.web.applet_streamlit:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
pythonpath = ["python/src"]
addopts = "-q"
