[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sofa-resp-sim"
version = "0.1.0"
description = "Respiratory SOFA scoring, simulation, and static Pyodide validation app."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Brian Locke, MD MSc" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/reblocke/sofa_resp_sim"
Repository = "https://github.com/reblocke/sofa_resp_sim"
Issues = "https://github.com/reblocke/sofa_resp_sim/issues"

[project.scripts]
resp-sofa-sim = "sofa_resp_sim.workflows.cli:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "pre-commit>=3.7",
  "pytest-playwright>=0.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "playwright>=1.55",
  "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sofa_resp_sim"]

[tool.hatch.build.targets.sdist]
include = [
  "src/sofa_resp_sim",
  "tests",
  "scripts",
  "web",
  "docs/*.md",
  "docs/adr/*.md",
  "artifacts",
  "README.md",
  "LICENSE",
  "CITATION.cff",
  "AGENTS.md",
]
exclude = [
  "web/assets/py",
  "web/assets/data",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-q"]
markers = [
  "e2e: browser end-to-end tests",
]
